sample/retrieveUnpackaged/objects/Historical_WaterMAP__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Historical WaterMAPs</relationshipLabel>
        <relationshipName>Historical_WaterMAPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_Id__c</fullName>
        <externalId>true</externalId>
        <label>Node Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Historical WaterMAP</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical WaterMAPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>